# RAG-App

./: .dockerignore  .env_template  .gitignore  Dockerfile  README.md  appconfig.yaml  docker-compose.yaml  main.py  pyproject.toml
LLM-service/: pyproject.toml
rag/: embeddings.py  loaders.py  pipeline.py  splitters.py  vectorstore.py
rag/embeddings/: __init__.py  custom_embedding.py  embedding.py
rag/schemas/: __init__.py  document.py
rag/vectorstores/: __init__.py  chroma_cloud.py  chroma_local.py  vectorstore.py
ui/: chat.py
