[project]
name = "RAG-App"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "chromadb>=1.1.1",
    "cryptography>=46.0.2",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.27",
    "numpy>=2.3.3",
    "ollama>=0.5.3",
    "pydantic>=2.11.7",
    "pypdf>=6.0.0",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
    "tiktoken>=0.11.0",
]
