[project]
name = "RAG-App"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.1",
    "cryptography>=46.0.2",
    "ollama>=0.5.3",
    "openai>=2.3.0",
    "pydantic>=2.11.7",
    "pypdf>=6.0.0",
    "streamlit>=1.49.1",
    "tiktoken>=0.11.0",
]
